--- a/views/harid.ejs
+++ b/views/harid.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="/src/style/harid.css" />
     <title>Plan</title>
   </head>
   <body>
@@ -11,7 +11,6 @@
       <section class="align-elements">
         <div class="container">
           <h1>EJS Framework</h1>
-
           <div class="card">
             <div class="card-body">
               <form id="create-form" action="/create-item" method="POST">
