--- a/public/src/style/author.css
+++ b/public/src/style/author.css
@@ -10,6 +10,15 @@ body {
   color: #333;
 }
 
+.main-container {
+  width: 100%;
+  max-width: 1410px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .container {
   display: flex;
   min-height: 100vh;
@@ -136,6 +145,7 @@ body {
   border-radius: 2px;
   margin-top: 6px;
   overflow: hidden;
+  margin-bottom: 12px;
 }
 
 .skill-progress {
