refactor: Update item name to 'reja' in input field and enhance item creation logic

--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -25,7 +25,7 @@
                 <div class="form-control">
                   <input
                     id="create-file"
-                    name="item"
+                    name="reja"
                     autocomplete="off"
                     type="text"
                     placeholder="ex: NodeJS..."
