feat: Integrate Axios for item creation and enhance reja view functionality

--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -65,5 +65,9 @@
         </div>
       </section>
     </main>
+    <!-- axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <script src="js/browser.js"></script>
   </body>
 </html>
