--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -52,14 +52,17 @@
                 <button data-id="<%=item._id%>" class="btn-primary edit-btn">
                   <i class="fa-solid fa-pen fa-xs" style="color: #ffffff"></i>
                 </button>
-                <button data-id="<%=item._id%>" class="delete-btn btn-primary">
+                <button
+                  data-id="<%=item._id%>"
+                  class="list-delete delete-btn btn-primary"
+                >
                   O'chirish
                 </button>
               </div>
             </div>
             <% })%>
           </div>
-          <button class="delete-btn btn btn-danger">
+          <button class="container-delete delete-btn btn btn-danger">
             Barchasini o'chirish
           </button>
         </div>
