--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -62,7 +62,7 @@
             </div>
             <% })%>
           </div>
-          <button class="container-delete delete-btn btn btn-danger">
+          <button class="delete-all delete-btn btn btn-danger">
             Barchasini o'chirish
           </button>
         </div>
